fix: workshop accuracy review pass (BM25, caches, MCP, pgvector, docs)
Implement the fixes called out in WORKSHOP-ACCURACY-REVIEW.md. Notable
behavior changes; many doc-only corrections folded in alongside.

Code:
- BM25 length normalization now uses total tokens (not unique-token
  set size); tokenize each segment once per search call.
- CachingService: ConcurrentHashMap, `unless="#result == null"`,
  per-key Redis TTL, zero-norm guard in cosineSimilarity, O(n)/HNSW
  note.
- RedisChatMemoryStore: real serialization via LangChain4J's
  ChatMessageSerializer/Deserializer over StringRedisTemplate
  (previously persisted only a "stored" marker).
- EmbeddingService: add batch `generateEmbeddings(List<String>)`.
- Module 03: real MCP client wiring (langchain4j-mcp + stdio
  transport against the official filesystem server, gated on
  `mcp.filesystem.enabled`), plus a `GlobalExceptionHandler` and
  `maxRetries(3)` on the chat model.
- Remove permanently-empty `toolsUsed` from Module 03 `ChatResponse`.

Infra / build:
- docker-compose: replace single `workshop_db` with init script that
  creates `workshop_module03` + `workshop_module04` and seeds both.
- Module 03: `application.properties` -> `application.yml`, DB
  renamed to `workshop_module03`.
- Module 04: real `init-db.sql` seed file under
  `src/main/resources/db/` (was inline in docs only).
- Rename `src/module-01-vectors-embeddings` -> `module-01-vector-embeddings`
  to match the tutorial path (`Module01VectorsEmbeddings...` ->
  `Module01VectorEmbeddings...`).

Docs:
- Java 25 / Spring Boot 4 / gpt-4o-mini sweep on
  README, troubleshooting, book.json / .tutorial-metadata.json.
- Module 02: clarified `IndexedSegment`/`searchSegments` ownership;
  rewrote BM25 walkthrough; corrected Exercise 3 StructuredTaskScope
  signature.
- Module 03: relabeled `04-mcp-configuration.md` as in-process tool
  calling (not MCP); new `09-real-mcp.md` chapter for the real MCP
  client.
- Module 04: ReAct chapter now warns about reg